# FriendlyComputer

./: Boot.qml  CMakeLists.txt  Contributors.md  Error.qml  Execute.qml  GenerateLauncher.cmake  Launcher.exe.in  Main.qml  MainWindow.qml  Setup.qml  Splash.qml  all.qrc  config.json  main.cpp  window.qml  window.qrc
